add redoc settings

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
-SHORTENER_MONGODB_DSN=mongodb://root:example@localhost
-SHORTENER_DEBUG=True
+MEOWRL_MONGODB_DSN=mongodb://root:example@localhost
+MEOWRL_DEBUG=True
+MEOWRL_ENABLE_SPECS=True
 
-SHORTENER_KEYCLOAK_VERIFY_SIGNATURE=False
-SHORTENER_KEYCLOAK_CLIENT_ID=test
-SHORTENER_KEYCLOAK_SERVER_URL=http://127.0.0.1:8080/auth/
-SHORTENER_KEYCLOAK_REALM_NAME=test
+MEOWRL_KEYCLOAK_VERIFY_SIGNATURE=False
+MEOWRL_KEYCLOAK_CLIENT_ID=test
+MEOWRL_KEYCLOAK_SERVER_URL=http://127.0.0.1:8080/auth/
+MEOWRL_KEYCLOAK_REALM_NAME=test
 
-SHORTENER_GEOIP2_ACCOUNT_ID: 123456
-SHORTENER_GEOIP2_LICENSE_KEY: qwerty
+MEOWRL_GEOIP2_ACCOUNT_ID: 123456
+MEOWRL_GEOIP2_LICENSE_KEY: qwerty
