--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,6 @@
 name: Lint
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
@@ -17,6 +17,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade pre-commit
-          python -m pip install -e '.[d]'
       - name: Lint
         run: pre-commit run --all-files --show-diff-on-failure
