--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,6 +1,7 @@
 name: Lint
 
-on: [pull_request]
+on:
+  - pull_request
 
 jobs:
   build:
@@ -8,14 +9,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python
+      -
+        uses: actions/checkout@v2
+      -
+        name: Set up Python
         uses: actions/setup-python@v2
-
-      - name: Install dependencies
+        with:
+          python-version: 3.9
+      -
+        name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade pre-commit
-      - name: Lint
-        run: pre-commit run --all-files --show-diff-on-failure
+          python -m pip install --requirement requirements.txt
+          python -m pip install --upgrade pre-commit==2.12.0
+      -
+        name: flake8
+        run: pre-commit run flake8 --all-files --show-diff-on-failure
+      -
+        name: pylint
+        run: pre-commit run pylint --all-files --show-diff-on-failure
+      -
+        name: mypy
+        run: pre-commit run mypy --all-files --show-diff-on-failure
