--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --requirement requirements.txt
-          python -m pip install --upgrade pre-commit==2.12.0
+          python -m pip install --upgrade pre-commit==2.12.0 pylint==2.7.4
       -
         name: flake8
         run: pre-commit run flake8 --all-files --show-diff-on-failure
