--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,16 +12,19 @@ jobs:
       -
         uses: actions/checkout@v2
       -
-        name: Set up Python
+        name: set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
       -
-        name: Install dependencies
+        name: install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install --requirement requirements.txt
           python -m pip install --upgrade pre-commit==2.12.0 pylint==2.7.4
+      -
+        name: install hooks
+        run: pre-commit install-hooks
       -
         name: flake8
         run: pre-commit run flake8 --all-files --show-diff-on-failure
