--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,41 +1,36 @@
-name: ✔️ static code analysis
+name: Lint
 
 on:
-  pull_request:
-    branches: [ main ]
+  - pull_request
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.lint.txt; fi
-
-    - name: Lint with black
-      run: |
-        black --line-length 120 --check app
-
-    - name: Lint with flake8
-      run: |
-        flake8 ./app --count --show-source --statistics
-
-    - name: Lint with pylint
-      run: |
-        pylint ./app
-
-    - name: Lint with mypy
-      run: |
-        mypy ./app --pretty
+      -
+        uses: actions/checkout@v2
+      -
+        name: set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      -
+        name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --requirement requirements.txt
+          python -m pip install --upgrade pre-commit==2.12.0 pylint==2.7.4
+      -
+        name: install hooks
+        run: pre-commit install-hooks
+      -
+        name: flake8
+        run: pre-commit run flake8 --all-files --show-diff-on-failure
+      -
+        name: pylint
+        run: pre-commit run pylint --all-files --show-diff-on-failure
+      -
+        name: mypy
+        run: pre-commit run mypy --all-files --show-diff-on-failure
